tests/type/errors/bad_multiarray2.xi
foo() {
    x:bool[][] = {true,false}
}